--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.2",
-    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -37,5 +36,12 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {
+  "tailwindcss": "^3.4.4",
+  "postcss": "^8.4.31",
+  "autoprefixer": "^10.4.21",
+  "react-scripts": "5.0.1"
+}
+
 }
