--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@rainbow-me/rainbowkit": "^2.2.8",
+    "@tanstack/query-core": "^5.81.2",
+    "@tanstack/react-query": "^5.81.2",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
@@ -12,6 +15,8 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.2",
+    "viem": "^2.31.4",
+    "wagmi": "^2.15.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -42,6 +47,7 @@
     "autoprefixer": "^10.4.21",
     "postcss": "^8.4.31",
     "react-scripts": "5.0.1",
-    "tailwindcss": "^3.4.4"
+    "tailwindcss": "^3.4.4",
+    "typescript": "^5.4.5"
   }
 }
