--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "canvas-confetti": "^1.9.3",
+    "emailjs-com": "^3.2.0",
     "firebase": "^11.8.1",
     "framer-motion": "^12.19.2",
     "lucide-react": "^0.518.0",
