--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
     "canvas-confetti": "^1.9.3",
     "emailjs-com": "^3.2.0",
     "firebase": "^11.8.1",
-    "framer-motion": "^12.19.2",
+    "framer-motion": "^12.23.0",
     "lucide-react": "^0.518.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.2",
+    "three": "^0.178.0",
     "viem": "^2.31.4",
     "wagmi": "^2.15.6",
     "web-vitals": "^2.1.4"
