--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "emailjs-com": "^3.2.0",
     "firebase": "^11.10.0",
     "framer-motion": "^12.23.0",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.518.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
+    "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.6.2",
     "three": "^0.178.0",
     "viem": "^2.31.4",
